# mcp-prototyping

./: .env.example  README.md  pyproject.toml
example-client-spotify/: spotify_langchain_client.py  spotify_langchain_client_v2.py
example-client-spotify/spotify-mcp/: test_auth.py
example-server-spotify/: spotify_mcp_server.py
mcp-tutorial/: .gitignore  example.py  requirements.txt
mcp-tutorial/python-sdk/: pyproject.toml
mcp-tutorial/python-sdk/examples/snippets/servers/: README_EXAMPLES.md  fastmcp_quickstart.py  lifespan_example.py
